--- a/backend/student_login/templates/login.html
+++ b/backend/student_login/templates/login.html
@@ -22,6 +22,11 @@
       </div>
       <input type="submit" class="btn" value="Login">
     </form>
+
+    <div style="text-align:center; margin-top: 10px;">
+      <p>New here?</p>
+      <a href="/register"><button class="btn" style="background-color: #5cb85c;">Sign Up</button></a>
+    </div>
   </div>
 </body>
 </html>
