--- a/backend/student_login/templates/login.html
+++ b/backend/student_login/templates/login.html
@@ -22,6 +22,22 @@
       </div>
       <input type="submit" class="btn" value="Login">
     </form>
+    <div style="text-align:center; margin-top: 10px;">
+  <p>New here?</p>
+  <a href="/register"><button class="btn" style="background-color: #5cb85c;">Sign Up</button></a>
+</div>
+    <div style="text-align:center; margin-top: 10px;">
+      <p>Forgot your password?</p>
+      <a href="/reset_password"><button class="btn" style="background-color: #d9534f;">Reset Password</button></a>
+    </div>
+    <div style="text-align:center; margin-top: 10px;">
+      <p>Need help?</p>
+      <a href="/help"><button class="btn" style="background-color: #5bc0de;">Help</button></a>
+    </div>
+    <div style="text-align:center; margin-top: 10px;">
+      <p>Back to home?</p>
+      <a href="/"><button class="btn" style="background-color: #f0ad4e;">Home</button></a>
+    </div>
 
     <div style="text-align:center; margin-top: 10px;">
       <p>New here?</p>
