driver link not working

--- a/backend/student_login/templates/login.html
+++ b/backend/student_login/templates/login.html
@@ -30,7 +30,9 @@
 
     <div style="text-align:center; margin-top: 10px;">
       <p>Are you a driver?</p>
-      <a href="{{ url_for('driver.driver_login') }}"><button class="btn" style="background-color: #6c757d;">Driver Login</button></a>
+      <a href="{{ url_for('driver.driver_login') }}">
+        <button class="btn" style="background-color: #6c757d;">Driver Login</button>
+      </a>
     </div>
   </div>
 </body>
